# indelible

./: Makefile.am  configure.ac  indelible.1  readme.txt
help/: index.html
src/: MersenneTwister.h  control.cpp  indelible.cpp
